# Axiom

./: .env.example  .gitignore  CLAUDE.md  README.md  action.yml  axiom.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  spec-auditor.md
.claude/commands/: audit-spec.md  phase-check.md  review.md
.github/workflows/: ci.yml  release.yml
.hypothesis/constants/: 06b0585e5ff20fcd  07bcd7153c04aea9  08a750cd9e89829d  09972f10ffd5b5a0  0b05c35806aa3959  0f7c5a6eac4b7cf7  14de91b5bf94a8b5  153fb0728c8be4bc  176f0c939d356da3  18855c8d9525f112  18fccc73bda8a569  1a06069d65b48400  1c3cce3b2f0e3e5d  1ce6dd30dc62d743  22436f6f25c285a8  224667ea7bb5b573  23cfb69e588f50b2  2770d928c1e65c09  2916749c02e4555a  2a8b48fbfbfca86f  2c9063ac63df4a28  34fc02ebfd39eeb0  36cdf95a9eb3c837  3738a0973397e43a  39f713eee522899f  3b7800e9cf6fc42b  3d02b799e3b8c6f4  3efc2324a0e8cb66  42855fac8527c87a  440517b05f27008d  4681823d8903936d  4cbab2283d395330  514f2a08b46b9ad0  533263d03c6a636b  57aff62e32f041dd  626b38dc580d444d  65a8236a9299fb7e  69936bd0b6e2fb9f  7367fc3be0fa3229  77a41836f88ffb2b  (+45 more)
app/: globals.css  layout.tsx  page.tsx
components/: axiom-logo.tsx  comparison-section.tsx  core-insight.tsx  cta-section.tsx  features-section.tsx  hero-section.tsx  problem-section.tsx  site-footer.tsx  site-header.tsx  spec-preview.tsx
docs/: PHASE.md  ROADMAP.md  architecture.md  axiom-implementation-spec.md  axiom-northstar-prd.md  cli-reference.md  codebase-audit-market-fit.md  deep-market-research.md  getting-started.md  review-52ede8a.md  review-701f049.md  review-bae8f7a.md  spec-format.md  specs-as-source-northstar-prd.md
specs/: SPEC_FORMAT.md
specs/examples/: create_user.axiom  get_user.axiom  parse_csv_row.axiom  slugify.axiom  validate_email.axiom  webhook_handler.axiom
specs/self/: camel_to_snake.axiom  chunk_list.axiom  clamp.axiom  clean_code.axiom  compare_values.axiom  compare_versions.axiom  compute_spec_hash.axiom  count_lines.axiom  detect_cycle.axiom  diff_dicts.axiom  escape_regex.axiom  extract_code.axiom  extract_imports.axiom  extract_urls.axiom  flatten_list.axiom  format_bytes.axiom  format_duration.axiom  format_example.axiom  format_failure.axiom  format_invariant.axiom  format_type_annotation.axiom  format_value.axiom  generate_default_value.axiom  generate_error_value.axiom  group_by.axiom  hash_content.axiom  indent_text.axiom  is_close_value.axiom  is_valid_email.axiom  lerp.axiom  merge_dicts.axiom  normalize_path.axiom  normalize_type.axiom  parse_function_signature.axiom  parse_json_safely.axiom  parse_version.axiom  pluralize.axiom  redact_secrets.axiom  retry_config.axiom  safe_get.axiom  (+11 more)
specs/user_crud/: create_user.axiom  get_user_by_id.axiom  hash_password.axiom  validate_email.axiom
src/axiom/: __init__.py  _generated.py  (+1 more)
tests/: test_cache.py  test_config.py  test_escape_verifier.py  test_evolution.py  test_example_runner.py  test_formal.py  test_infer.py  test_interactive.py  test_lint_fixer.py  test_lsp.py  test_lsp_actions.py  test_lsp_symbols.py  test_parser.py  test_protected_blocks.py  test_provenance.py  test_sandbox.py  test_scoring.py  test_security_scanner.py  test_self_hosting.py  test_targets.py
vscode-axiom/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
(+94 files in other folders)
